--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
-spring :
-  application :
-    name : BACKEND
+spring:
+  application:
+    name: BACKEND
   jpa:
     hibernate:
       ddl-auto: create-drop
@@ -17,3 +17,22 @@ spring :
     url: jdbc:h2:mem:test
     username: sa
     password:
+
+oauth:
+  kakao:
+    client-id: ${KAKAO_CLIENT_ID}
+    redirect-uri: http://localhost:3000/auth/kakao/callback
+    token-uri: https://kauth.kakao.com/oauth/token
+    user-info-uri: https://kapi.kakao.com/v2/user/me
+    secret: ${KAKAO_CLIENT_SECRET}
+
+  naver:
+    client-id: ${NAVER_CLIENT_ID}
+    redirect-uri: http://localhost:3000/auth/naver/callback
+    token-uri: https://nid.naver.com/oauth2.0/token
+    user-info-uri: https://openapi.naver.com/v1/nid/me
+    client-secret: ${NAVER_CLIENT_SECRET}
+
+jwt:
+  secret-key: ${JWT_SECRET_KEY}
+  accessToken-expiration-millis: 1800000
