--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,8 @@
 spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 10MB
   application:
     name: BACKEND
   jpa:
@@ -36,3 +40,10 @@ oauth:
 jwt:
   secret-key: ${JWT_SECRET_KEY}
   accessToken-expiration-millis: 1800000
+
+aws:
+  s3:
+    bucket: ${S3_BUCKET_NAME}
+    region: ${S3_REGION}
+    access-key-id: ${S3_ACCESS_KEY}
+    secret-access-key: ${S3_SECRET_KEY}
