--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,19 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
+
+def generated = 'src/main/generated'
+
+def querydslDir = layout.buildDirectory.dir(generated).get().asFile
+
+sourceSets {
+    main.java.srcDirs += [querydslDir]
+}
+
+tasks.withType(JavaCompile).configureEach {
+    options.generatedSourceOutputDirectory = file(generated)
+}
+
 group = 'gnu.project'
 version = '0.0.1-SNAPSHOT'
 description = 'BACKEND'
@@ -47,6 +60,11 @@ dependencies {
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"
     //s3
     implementation 'software.amazon.awssdk:s3:2.20.25'
+    // QueryDSL
+    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+    annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
+    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
+    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 
 }
 
