--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,27 +24,26 @@ spring:
 
 oauth:
   kakao:
-    client-id: ${client-id}
+    client-id: ${KAKAO_CLIENT_ID}
     redirect-uri: http://localhost:3000/auth/kakao/callback
     token-uri: https://kauth.kakao.com/oauth/token
     user-info-uri: https://kapi.kakao.com/v2/user/me
-    secret: ${secret}
+    secret: ${KAKAO_CLIENT_SECRET}
 
   naver:
-    client-id: ${client-id}
+    client-id: ${NAVER_CLIENT_ID}
     redirect-uri: http://localhost:3000/auth/naver/callback
     token-uri: https://nid.naver.com/oauth2.0/token
     user-info-uri: https://openapi.naver.com/v1/nid/me
-    client-secret: ${client-secret}
+    client-secret: ${NAVER_CLIENT_SECRET}
 
 jwt:
-  secret-key: ${secret-key}
+  secret-key: ${JWT_SECRET_KEY}
   accessToken-expiration-millis: 1800000
 
 aws:
   s3:
-    bucket: ${bucket}
-    region: ap-northeast-2
-    access-key-id: ${access-key-id}
-    secret-access-key: ${secret-access-key}
-
+    bucket: ${S3_BUCKET_NAME}
+    region: ${S3_REGION}
+    access-key-id: ${S3_ACCESS_KEY}
+    secret-access-key: ${S3_SECRET_KEY}
