--- a/build.gradle
+++ b/build.gradle
@@ -60,12 +60,16 @@ dependencies {
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.5"
     //s3
     implementation 'software.amazon.awssdk:s3:2.20.25'
+
     // QueryDSL
     implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
     annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
     annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
     annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
-
+    
+    // Monitoring
+    implementation 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 tasks.named('test') {
