--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,3 +47,18 @@ aws:
     region: ${S3_REGION}
     access-key-id: ${S3_ACCESS_KEY}
     secret-access-key: ${S3_SECRET_KEY}
+
+management:
+  health:
+    rabbit:
+      enabled: false
+  endpoints:
+    web:
+      base-path: /actuator
+      exposure:
+        include: health, info, prometheus
+  metrics:
+    enable:
+      jdbc: true
+    tags:
+      application: yeon
