--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,27 +1,12 @@
 spring:
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE}
+  application:
+    name: yeon
   servlet:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-  application:
-    name: BACKEND
-  jpa:
-    hibernate:
-      ddl-auto: create-drop
-    defer-datasource-initialization: true
-    show-sql: true
-  h2:
-    console:
-      enabled: true
-      settings:
-        web-allow-others: true
-      path: /h2-console
-  datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:mem:test;MODE=MySQL
-    username: sa
-    password:
-
 oauth:
   kakao:
     client-id: ${KAKAO_CLIENT_ID}
