--- a/prometheus.yml
+++ b/prometheus.yml
@@ -11,3 +11,7 @@ scrape_configs:
   - job_name: 'node_exporter'
     static_configs:
       - targets: [ 'node_exporter:9100' ]
+
+  - job_name: 'mysql_exporter'
+    static_configs:
+      - targets: [ 'mysql_exporter:9104' ]
