--- a/src/main/resources/application-perform.yml
+++ b/src/main/resources/application-perform.yml
@@ -24,4 +24,17 @@ spring:
       ddl-auto: update
     defer-datasource-initialization: true
     show-sql: false
+oauth:
+  kakao:
+    client-id: ${KAKAO_CLIENT_ID}
+    redirect-uri: http://localhost:3000/auth/kakao/callback
+    token-uri: https://kauth.kakao.com/oauth/token
+    user-info-uri: https://kapi.kakao.com/v2/user/me
+    secret: ${KAKAO_CLIENT_SECRET}
 
+  naver:
+    client-id: ${NAVER_CLIENT_ID}
+    redirect-uri: http://localhost:3000/auth/naver/callback
+    token-uri: https://nid.naver.com/oauth2.0/token
+    user-info-uri: https://openapi.naver.com/v1/nid/me
+    client-secret: ${NAVER_CLIENT_SECRET}
