--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -78,20 +78,22 @@ jobs:
             
             # .env 파일 생성
             cat <<EOF > .env
-            S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
-            S3_REGION: ${{ secrets.S3_REGION }}
-            S3_ACCESS_KEY: ${{ secrets.S3_ACCESS_KEY }}
-            S3_SECRET_KEY: ${{ secrets.S3_SECRET_KEY }}
-            JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
-            DB_URL: ${{ secrets.DB_URL }}
-            DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
-            DB_USERNAME: ${{ secrets.DB_USERNAME }}
-            KAKAO_CLIENT_ID: ${{ secrets.KAKAO_CLIENT_ID }}
-            KAKAO_REDIRECT_URI: ${{ secrets.KAKAO_REDIRECT_URI }}
-            NAVER_CLIENT_ID: ${{ secrets.NAVER_CLIENT_ID }}
-            KAKAO_CLIENT_SECRET: ${{ secrets.KAKAO_CLIENT_SECRET }} 
-            NAVER_REDIRECT_URI: ${{ secrets.NAVER_REDIRECT_URI }}
-            NAVER_CLIENT_SECRET: ${{ secrets.NAVER_CLIENT_SECRET }} 
+            S3_BUCKET_NAME=${{ secrets.S3_BUCKET_NAME }}
+            S3_REGION=${{ secrets.S3_REGION }}
+            S3_ACCESS_KEY=${{ secrets.S3_ACCESS_KEY }}
+            S3_SECRET_KEY=${{ secrets.S3_SECRET_KEY }}
+            JWT_SECRET_KEY=${{ secrets.JWT_SECRET_KEY }}
+            DB_URL=${{ secrets.DB_URL }}
+            DB_PASSWORD=${{ secrets.DB_PASSWORD }}
+            DB_USERNAME=${{ secrets.DB_USERNAME }}
+            KAKAO_CLIENT_ID=${{ secrets.KAKAO_CLIENT_ID }}
+            KAKAO_REDIRECT_URI=${{ secrets.KAKAO_REDIRECT_URI }}
+            NAVER_CLIENT_ID=${{ secrets.NAVER_CLIENT_ID }}
+            KAKAO_CLIENT_SECRET=${{ secrets.KAKAO_CLIENT_SECRET }}
+            NAVER_REDIRECT_URI=${{ secrets.NAVER_REDIRECT_URI }}
+            NAVER_CLIENT_SECRET=${{ secrets.NAVER_CLIENT_SECRET }}
+            GF_SECURITY_ADMIN_USER=${{ secrets.GF_SECURITY_ADMIN_USER }}
+            GF_SECURITY_ADMIN_PASSWORD=${{ secrets.GF_SECURITY_ADMIN_PASSWORD }}
             EOF
             # -f 옵션으로 사용할 compose 파일 명시
             docker compose -f docker-compose-prod.yml pull
