--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,7 +6,7 @@ scrape_configs:
   - job_name: 'springboot-app'
     metrics_path: '/actuator/prometheus'
     static_configs:
-      - targets: [ 'host.docker.internal:8080' ]
+      - targets: ['springboot-app:8080', 'host.docker.internal:8080']
 
   - job_name: 'node_exporter'
     static_configs:
