--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -58,10 +58,11 @@ jobs:
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
+          password: ${{ secrets.EC2_PASSWORD }}
+          port: ${{ secrets.EC2_PORT }}
           script: |
             # 대상 디렉토리 생성 및 이동
-            cd /home/ubuntu/yeon || { mkdir -p /home/ubuntu/yeon && cd /home/ubuntu/yeon; }
+            cd /home/mint/yeon || { mkdir -p /home/mint/yeon && cd /home/mint/yeon; }
             
             # 기존 컨테이너 중지 (마운트 해제를 위해)
             docker compose -f docker-compose-prod.yml down 2>/dev/null || true
