--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,7 +62,7 @@ jobs:
           port: ${{ secrets.EC2_PORT }}
           script: |
             # 대상 디렉토리 생성 및 이동
-            cd /home/corner/yeon || { mkdir -p /home/corner/yeon && cd /home/corner/yeon; }
+            cd ~/yeon || { mkdir -p ~/yeon && cd ~/yeon; }
             
             # 기존 컨테이너 중지 (마운트 해제를 위해)
             docker compose -f docker-compose-prod.yml down 2>/dev/null || true
