--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -36,6 +36,7 @@ services:
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
+      - '--web.listen-address=:9091'
     restart: unless-stopped
     healthcheck:
       test: [ "CMD", "wget", "--spider", "-q", "http://localhost:9091/-/healthy" ]
