--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -22,7 +22,6 @@ spring:
     username: sa
     password:
 
-
 oauth:
   kakao:
     client-id: ${KAKAO_CLIENT_ID}
@@ -37,3 +36,9 @@ oauth:
     token-uri: https://nid.naver.com/oauth2.0/token
     user-info-uri: https://openapi.naver.com/v1/nid/me
     client-secret: ${NAVER_CLIENT_SECRET}
+
+payment:
+  toss:
+    base-url: https://api.tosspayments.com
+    secret-key: ${TOSS_SECRET_KEY}
+    confirm-url: /v1/payments/confirm
