--- a/src/main/resources/application-perform.yml
+++ b/src/main/resources/application-perform.yml
@@ -38,3 +38,9 @@ oauth:
     token-uri: https://nid.naver.com/oauth2.0/token
     user-info-uri: https://openapi.naver.com/v1/nid/me
     client-secret: ${NAVER_CLIENT_SECRET}
+
+payment:
+  toss:
+    base-url: https://api.tosspayments.com
+    secret-key: ${TOSS_SECRET_KEY}
+    confirm-url: /v1/payments/confirm
