--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -23,6 +23,8 @@ services:
       DB_URL: ${DB_URL}
       DB_USERNAME: ${DB_USERNAME}
       DB_PASSWORD: ${DB_PASSWORD}
+      TOSS_CLIENT_KEY: ${TOSS_CLIENT_KEY}
+      TOSS_SECRET_KEY: ${TOSS_SECRET_KEY}
     networks:
       - monitoring_net
   prometheus:
