--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -82,10 +82,21 @@ services:
     restart: unless-stopped
     networks:
       - monitoring_net
-
+  redis:
+    image: redis:7.2.4-alpine3.19
+    container_name: redis-server
+    restart: unless-stopped
+    ports:
+      - "6380:6379"
+    volumes:
+      - redis_data:/data
+    command: redis-server --save 60 1 --loglevel warning
+    networks:
+      - monitoring_net
 volumes:
   prometheus_data:
   grafana_data:
+  redis_data:
 
 networks:
   monitoring_net:
