feat: 최근 검색어 기능 추가

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -94,7 +94,7 @@ services:
     restart: unless-stopped
     networks:
       - monitoring_net
-      
+
   nginx:
     image: nginx:alpine
     container_name: nginx
@@ -122,11 +122,26 @@ services:
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
     networks:
       - monitoring_net
-      
+
+  redis:
+    image: redis:7.0-alpine
+    container_name: redis-server
+    ports:
+      - "6380:6379"
+    volumes:
+      - redis_data:/data
+    command: [ "redis-server", "--appendonly", "yes" ]
+    restart: unless-stopped
+    networks:
+      - monitoring_net
+
+
 volumes:
   prometheus_data:
     driver: local
   grafana_data:
+    driver: local
+  redis_data:
     driver: local
 
 networks:
