--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -25,6 +25,9 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
       TOSS_CLIENT_KEY: ${TOSS_CLIENT_KEY}
       TOSS_SECRET_KEY: ${TOSS_SECRET_KEY}
+      REDIS_PORT: ${REDIS_PORT}
+      REDIS_HOST: ${REDIS_HOST}
+
     networks:
       - monitoring_net
   prometheus:
