--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,8 @@ spring:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
-
+  jpa:
+    open-in-view: false
 
 payment:
   toss:
